Fix debian package build

--- a/Makefile.am
+++ b/Makefile.am
@@ -10,5 +10,5 @@ EXTRA_DIST =
 EXTRA_DIST += autogen.sh
 EXTRA_DIST += include
 EXTRA_DIST += debian
-EXTRA_DIST += nccl-rdma-sharp-plugins.spec
+EXTRA_DIST += rccl-rdma-sharp-plugins.spec
 
