--- a/.ci/Jenkinsfile
+++ b/.ci/Jenkinsfile
@@ -20,8 +20,8 @@ pipeline {
     environment {
         ARTEFACT_DIR                = "${WORKSPACE}/artefacts"
         // Note: ${NFS_WORKSPACE_ROOT} is cleaned up daily (5 day old files are removed)
-        NFS_WORKSPACE               = "${NFS_WORKSPACE_ROOT}/ml-nccl-rdma-sharp-plugins-pr/${BUILD_NUMBER}"
-        NCCL_RDMA_SHARP_PLUGINS_DIR = "${NFS_WORKSPACE}/nccl-rdma-sharp-plugins"
+        NFS_WORKSPACE               = "${NFS_WORKSPACE_ROOT}/ml-rccl-rdma-sharp-plugins-pr/${BUILD_NUMBER}"
+        NCCL_RDMA_SHARP_PLUGINS_DIR = "${NFS_WORKSPACE}/rccl-rdma-sharp-plugins"
         NCCL_TESTS_DIR              = "${NFS_WORKSPACE}/nccl-tests"
     }
 
@@ -33,9 +33,9 @@ pipeline {
                 sh 'mkdir -p ${NFS_WORKSPACE}'
             }
         }
-        stage('Build nccl-rdma-sharp-plugins') {
+        stage('Build rccl-rdma-sharp-plugins') {
             steps {
-                echo 'Building nccl-rdma-sharp-plugins...'
+                echo 'Building rccl-rdma-sharp-plugins...'
                 sh """#!/bin/bash
                     set -o pipefail
                     ${WORKSPACE}/.ci/build_nccl_rdma_sharp_plugins.sh 2>&1 | tee ${ARTEFACT_DIR}/build_nccl_rdma_sharp_plugins.log
@@ -59,9 +59,9 @@ pipeline {
                 }
             }
         }
-        stage('Test nccl-rdma-sharp-plugins') {
+        stage('Test rccl-rdma-sharp-plugins') {
             steps {
-                echo 'Testing nccl-rdma-sharp-plugins...'
+                echo 'Testing rccl-rdma-sharp-plugins...'
                 sh """#!/bin/bash
                     set -o pipefail
                     ${WORKSPACE}/.ci/run_nccl_tests.sh 2>&1 | tee ${ARTEFACT_DIR}/run_nccl_test.log
