--- a/debian/changelog.in
+++ b/debian/changelog.in
@@ -1,5 +1,5 @@
-nccl-rdma-sharp-plugins (@VERSION@) unstable; urgency=low
+rccl-rdma-sharp-plugins (@VERSION@) unstable; urgency=low
 
   * Initial release (Closes: #nnnn)  <nnnn is the bug number of your ITP>
 
- -- Mellanox Ltd. <support@mellanox.com>  Wed, 11 Sep 2013 15:24:22 +0300
+ -- AMD Inc. <rccl-maintainer@amd.com>  Fri, 19 Mar 2021 14:05:06 -0700
